5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4481/executions/1831_1645.log
== TEST (2019-06-13 16:19:23) 
-- CODE:
from numpy import*

a = array(eval(input('quantos saques foram efuados: ')))
for i in range(size(a)):
	if(a[i]>= 2000):
		b = b + 1
c=zeros(b, dtype=int)
d = 0
for i in range(size(a)):
	if(a[i]>= 2000):
		c[d]=c[d]+1
		d[1]=d[1]+1
print(d)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:19:45) 
-- CODE:
from numpy import*

a = array(eval(input('quantos saques foram efuados: ')))
for i in range(size(a)):
	if(a[i]>= 2000):
		b = b + 1
c=zeros(b, dtype=int)
d = 0
for i in range(size(a)):
	if(a[i]>= 2000):
		c[d]=c[d]+1
		d[1]=d[1]+1
print(b)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:24:24) 
-- CODE:
from numpy import*

a = array(eval(input('quantos saques foram efuados: ')))
for i in range(size(a)):
	if(a[i]>= 2000):
		b = b + 1
c=zeros(b, dtype=int)
b = 0
for i in range(size(a)):
	if(a[i]>= 2000):
		c[d]=i
		d=d+1
c=zeros(d,dtype=int)
d=0
print(b)
print(c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:27:19) 
-- CODE:
from numpy import*

a = array(eval(input('quantos saques foram efuados: ')))
for i in range(size(a)):
	if(a[i]>= 2000):
		b = b + 1
c=zeros(b, dtype=int)
b = 0
for i in range(size(a)):
	if(a[i]>= 2000):
		c[d]=i
		d=d+1
c=zeros(d,dtype=int)
d=0
print(b)
print(c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:32:23) 
-- CODE:
from numpy import*

a = array(eval(input('quantos saques foram efuados: ')))
for i in range(size(a)):
	if(a[i]>= 2000):
c=zeros(b, dtype=int)
b = 0
for i in range(size(a)):
	if(a[i]>= 2000):
		c[d]=i
		d=d+1
c=zeros(d,dtype=int)
d=0
print(b)
print(c)

-- EXECUTION TIME:
0.508546
-- ERROR:
  File "/home/codebench/codes/1831/1645/main.py", line 6
    c=zeros(b, dtype=int)
    ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:32:28) 
-- CODE:
from numpy import*

a = array(eval(input('quantos saques foram efuados: ')))
for i in range(size(a)):
	if(a[i]>= 2000):
c=zeros(b, dtype=int)
b = 0
for i in range(size(a)):
	if(a[i]>= 2000):
		c[d]=i
		d=d+1
c=zeros(d,dtype=int)
d=0
print(b)
print(c)

-- ERROR:
File "XXXX", line 6
    c=zeros(b, dtype=int)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:32:41) 
-- CODE:
from numpy import*

a = array(eval(input('quantos saques foram efuados: ')))
for i in range(size(a)):
	if(a[i]>= 2000):
c=zeros(a, dtype=int)
b = 0
for i in range(size(a)):
	if(a[i]>= 2000):
		c[d]=i
		d=d+1
c=zeros(d,dtype=int)
d=0
print(b)
print(c)

-- ERROR:
File "XXXX", line 6
    c=zeros(a, dtype=int)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:33:35) 
-- CODE:
from numpy import*

a = array(eval(input('quantos saques foram efuados: ')))
for i in range(size(a)):
	if(a[i]>= 2000):
		b=b+1
c=zeros(b, dtype=int)
b = 0
for i in range(size(a)):
	if(a[i]>= 2000):
		c[d]=i
		d=d+1
c=zeros(d,dtype=int)
d=0
print(b)
print(c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:34:49) 
-- CODE:
from numpy import*

a = array(eval(input('quantos saques foram efuados: ')))
for i in range(size(a)):
	if(a[i]>= 2000):
		b=b+1
c=zeros(b, dtype=int)
d = 0
for i in range(size(a)):
	if(a[i]>= 2000):
		c[d]=i
		d=d+1
print(b)
print(c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:35:13) 
-- CODE:
from numpy import*

a = array(eval(input('quantos saques foram efuados: ')))
for i in range(size(a)):
	if(a[i]>= 2000):
		b = b +1
c=zeros(b, dtype=int)
d = 0
for i in range(size(a)):
	if(a[i]>= 2000):
		c[d]=i
		d=d+1
print(b)
print(c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:35:30) 
-- CODE:
from numpy import*

a = array(eval(input('quantos saques foram efuados: ')))
for i in range(size(a)):
	if(a[i]>= 2000):
		b = b +1
c=zeros(b, dtype=int)
d = 0
for i in range(size(a)):
	if(a[i]>= 2000):
		c[d]=i
		d=d+1
print(b)
print(d)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:37:44) 
-- CODE:
from numpy import*
a = array(eval(input('quantos saques foram efuados: ')))
for i in range(size(a)):
	if(a[i]>= 2000):
		b=b+1
c=zeros(b, dtype=int)
d = 0
for i in range(size(a)):
	if(a[i]>= 2000):
		c[d]=i
		d=d+1
print(b)
print(d)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:41:40) 
-- CODE:
from numpy import*

a = array(eval(input('quantos saques foram efuados: ')))
for i in range(size(a)):
	if(a[i]>= 2000):
	b=b+1
c=zeros(b, dtype=int)
d = 0
for i in range(size(a)):
	if(a[i]>= 2000):
		c[d]=i
		d=d+1
print(b)
print(d)

-- EXECUTION TIME:
1.18547
-- ERROR:
  File "/home/codebench/codes/1831/1645/main.py", line 6
    b=b+1
    ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:41:41) 
-- CODE:
from numpy import*

a = array(eval(input('quantos saques foram efuados: ')))
for i in range(size(a)):
	if(a[i]>= 2000):
	b=b+1
c=zeros(b, dtype=int)
d = 0
for i in range(size(a)):
	if(a[i]>= 2000):
		c[d]=i
		d=d+1
print(b)
print(d)

-- EXECUTION TIME:
1.13561
-- ERROR:
  File "/home/codebench/codes/1831/1645/main.py", line 6
    b=b+1
    ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:41:42) 
-- CODE:
from numpy import*

a = array(eval(input('quantos saques foram efuados: ')))
for i in range(size(a)):
	if(a[i]>= 2000):
	b=b+1
c=zeros(b, dtype=int)
d = 0
for i in range(size(a)):
	if(a[i]>= 2000):
		c[d]=i
		d=d+1
print(b)
print(d)

-- EXECUTION TIME:
1.83231
-- ERROR:
  File "/home/codebench/codes/1831/1645/main.py", line 6
    b=b+1
    ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:41:43) 
-- CODE:
from numpy import*

a = array(eval(input('quantos saques foram efuados: ')))
for i in range(size(a)):
	if(a[i]>= 2000):
	b=b+1
c=zeros(b, dtype=int)
d = 0
for i in range(size(a)):
	if(a[i]>= 2000):
		c[d]=i
		d=d+1
print(b)
print(d)

-- EXECUTION TIME:
1.89204
-- ERROR:
  File "/home/codebench/codes/1831/1645/main.py", line 6
    b=b+1
    ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:41:45) 
-- CODE:
from numpy import*

a = array(eval(input('quantos saques foram efuados: ')))
for i in range(size(a)):
	if(a[i]>= 2000):
	b=b+1
c=zeros(b, dtype=int)
d = 0
for i in range(size(a)):
	if(a[i]>= 2000):
		c[d]=i
		d=d+1
print(b)
print(d)

-- EXECUTION TIME:
4.62562
-- ERROR:
  File "/home/codebench/codes/1831/1645/main.py", line 6
    b=b+1
    ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:41:46) 
-- CODE:
from numpy import*

a = array(eval(input('quantos saques foram efuados: ')))
for i in range(size(a)):
	if(a[i]>= 2000):
	b=b+1
c=zeros(b, dtype=int)
d = 0
for i in range(size(a)):
	if(a[i]>= 2000):
		c[d]=i
		d=d+1
print(b)
print(d)

-- EXECUTION TIME:
4.85716
-- ERROR:
  File "/home/codebench/codes/1831/1645/main.py", line 6
    b=b+1
    ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:41:50) 
-- CODE:
from numpy import*

a = array(eval(input('quantos saques foram efuados: ')))
for i in range(size(a)):
	if(a[i]>= 2000):
	b=b+1
c=zeros(b, dtype=int)
d = 0
for i in range(size(a)):
	if(a[i]>= 2000):
		c[d]=i
		d=d+1
print(b)
print(d)

-- EXECUTION TIME:
3.69674
-- ERROR:
  File "/home/codebench/codes/1831/1645/main.py", line 6
    b=b+1
    ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:41:51) 
-- CODE:
from numpy import*

a = array(eval(input('quantos saques foram efuados: ')))
for i in range(size(a)):
	if(a[i]>= 2000):
	b=b+1
c=zeros(b, dtype=int)
d = 0
for i in range(size(a)):
	if(a[i]>= 2000):
		c[d]=i
		d=d+1
print(b)
print(d)

-- EXECUTION TIME:
3.71585
-- ERROR:
  File "/home/codebench/codes/1831/1645/main.py", line 6
    b=b+1
    ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:41:52) 
-- CODE:
from numpy import*

a = array(eval(input('quantos saques foram efuados: ')))
for i in range(size(a)):
	if(a[i]>= 2000):
	b=b+1
c=zeros(b, dtype=int)
d = 0
for i in range(size(a)):
	if(a[i]>= 2000):
		c[d]=i
		d=d+1
print(b)
print(d)

-- EXECUTION TIME:
3.07331
-- ERROR:
  File "/home/codebench/codes/1831/1645/main.py", line 6
    b=b+1
    ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:41:53) 
-- CODE:
from numpy import*

a = array(eval(input('quantos saques foram efuados: ')))
for i in range(size(a)):
	if(a[i]>= 2000):
	b=b+1
c=zeros(b, dtype=int)
d = 0
for i in range(size(a)):
	if(a[i]>= 2000):
		c[d]=i
		d=d+1
print(b)
print(d)

-- EXECUTION TIME:
3.15999
-- ERROR:
  File "/home/codebench/codes/1831/1645/main.py", line 6
    b=b+1
    ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:41:54) 
-- CODE:
from numpy import*

a = array(eval(input('quantos saques foram efuados: ')))
for i in range(size(a)):
	if(a[i]>= 2000):
	b=b+1
c=zeros(b, dtype=int)
d = 0
for i in range(size(a)):
	if(a[i]>= 2000):
		c[d]=i
		d=d+1
print(b)
print(d)

-- EXECUTION TIME:
3.51186
-- ERROR:
  File "/home/codebench/codes/1831/1645/main.py", line 6
    b=b+1
    ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:41:55) 
-- CODE:
from numpy import*

a = array(eval(input('quantos saques foram efuados: ')))
for i in range(size(a)):
	if(a[i]>= 2000):
	b=b+1
c=zeros(b, dtype=int)
d = 0
for i in range(size(a)):
	if(a[i]>= 2000):
		c[d]=i
		d=d+1
print(b)
print(d)

-- EXECUTION TIME:
3.12707
-- ERROR:
  File "/home/codebench/codes/1831/1645/main.py", line 6
    b=b+1
    ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:42:00) 
-- CODE:
from numpy import*

a = array(eval(input('quantos saques foram efuados: ')))
for i in range(size(a)):
	if(a[i]>= 2000):
	b=b+1
c=zeros(b, dtype=int)
d = 0
for i in range(size(a)):
	if(a[i]>= 2000):
		c[d]=i
		d=d+1
print(b)
print(d)

-- EXECUTION TIME:
3.03724
-- ERROR:
  File "/home/codebench/codes/1831/1645/main.py", line 6
    b=b+1
    ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:42:00) 
-- CODE:
from numpy import*

a = array(eval(input('quantos saques foram efuados: ')))
for i in range(size(a)):
	if(a[i]>= 2000):
	b=b+1
c=zeros(b, dtype=int)
d = 0
for i in range(size(a)):
	if(a[i]>= 2000):
		c[d]=i
		d=d+1
print(b)
print(d)

-- EXECUTION TIME:
2.8094
-- ERROR:
  File "/home/codebench/codes/1831/1645/main.py", line 6
    b=b+1
    ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:42:01) 
-- CODE:
from numpy import*

a = array(eval(input('quantos saques foram efuados: ')))
for i in range(size(a)):
	if(a[i]>= 2000):
		b=b+1
c=zeros(b, dtype=int)
d = 0
for i in range(size(a)):
	if(a[i]>= 2000):
		c[d]=i
		d=d+1
print(b)
print(d)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:42:01) 
-- CODE:
from numpy import*

a = array(eval(input('quantos saques foram efuados: ')))
for i in range(size(a)):
	if(a[i]>= 2000):
	b=b+1
c=zeros(b, dtype=int)
d = 0
for i in range(size(a)):
	if(a[i]>= 2000):
		c[d]=i
		d=d+1
print(b)
print(d)

-- EXECUTION TIME:
2.71885
-- ERROR:
  File "/home/codebench/codes/1831/1645/main.py", line 6
    b=b+1
    ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:42:02) 
-- CODE:
from numpy import*

a = array(eval(input('quantos saques foram efuados: ')))
for i in range(size(a)):
	if(a[i]>= 2000):
	b=b+1
c=zeros(b, dtype=int)
d = 0
for i in range(size(a)):
	if(a[i]>= 2000):
		c[d]=i
		d=d+1
print(b)
print(d)

-- EXECUTION TIME:
2.81385
-- ERROR:
  File "/home/codebench/codes/1831/1645/main.py", line 6
    b=b+1
    ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:42:02) 
-- CODE:
from numpy import*

a = array(eval(input('quantos saques foram efuados: ')))
for i in range(size(a)):
	if(a[i]>= 2000):
	b=b+1
c=zeros(b, dtype=int)
d = 0
for i in range(size(a)):
	if(a[i]>= 2000):
		c[d]=i
		d=d+1
print(b)
print(d)

-- EXECUTION TIME:
3.22154
-- ERROR:
  File "/home/codebench/codes/1831/1645/main.py", line 6
    b=b+1
    ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:42:03) 
-- CODE:
from numpy import*

a = array(eval(input('quantos saques foram efuados: ')))
for i in range(size(a)):
	if(a[i]>= 2000):
	b=b+1
c=zeros(b, dtype=int)
d = 0
for i in range(size(a)):
	if(a[i]>= 2000):
		c[d]=i
		d=d+1
print(b)
print(d)

-- EXECUTION TIME:
3.13362
-- ERROR:
  File "/home/codebench/codes/1831/1645/main.py", line 6
    b=b+1
    ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:42:04) 
-- CODE:
from numpy import*

a = array(eval(input('quantos saques foram efuados: ')))
for i in range(size(a)):
	if(a[i]>= 2000):
	b=b+1
c=zeros(b, dtype=int)
d = 0
for i in range(size(a)):
	if(a[i]>= 2000):
		c[d]=i
		d=d+1
print(b)
print(d)

-- EXECUTION TIME:
2.23845
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1831/1645/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:43:01) 
-- CODE:
from numpy import*

a = array(eval(input('quantos saques foram efuados: ')))
b=0
for i in range(size(a)):
	if(a[i]>= 2000):
		b=b+1
c=zeros(b, dtype=int)
d = 0
for i in range(size(a)):
	if(a[i]>= 2000):
		c[d]=i
		d=d+1
print(b)
print(d)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:43:57) 
-- CODE:
from numpy import*

a = array(eval(input('quantos saques foram efuados: ')))
b=0
for i in range(size(a)):
	if(a[i]>= 2000):
		b=b+1
c=zeros(b, dtype=int)
d = 0
for i in range(size(a)):
	if(a[i]>= 2000):
		c[d]=i
		d=d+1
print(b)
print(d)

-- EXECUTION TIME:
1.22512
-- TEST CASE 1:
---- input:
[2000,1500,2100,1500,3000,3200,1205,1800]
---- correct output:
4
[0 2 4 5]
---- user output:
4
4
-- TEST CASE 2:
---- input:
[2000,1500,2100,1500,3000]
---- correct output:
3
[0 2 4]
---- user output:
3
3
-- TEST CASE 3:
---- input:
[2000,1500,1950,1555,1999,2050,2560,2851,1500,3000]
---- correct output:
5
[0 5 6 7 9]
---- user output:
5
5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:44:57) 
-- CODE:
from numpy import*
a = array(eval(input('quantos saques foram efuados: ')))
b=0
for i in range(size(a)):
	if(a[i]>= 2000):
		b=b+1
c=zeros(b, dtype=int)
d = 0
for i in range(size(a)):
	if(a[i]>= 2000):
		c[d]=i
		d=d+1
print(b)
print(d)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:45:30) 
-- CODE:
from numpy import*
a = array(eval(input('quantos saques foram efuados: ')))
b=0
for i in range(size(a)):
	if(a[i]>= 2000):
		b=b+1
c=zeros(b, dtype=int)
d = 0
for i in range(size(a)):
	if(a[i]>= 2000):
		c[d] = i
		d = d +1
print(b)
print(d)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:48:39) 
-- CODE:
from numpy import*
a = array(eval(input('quantos saques foram efuados: ')))
b=0
for i in range(size(a)):
	if(a[i]>= 2000):
		b=b+1
c=zeros(b, dtype=int)
d = 0
for i in range(size(a)):
	if(a[i]>= 2000):
		c[d] = i
		d = d +1
print(d)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:48:50) 
-- CODE:
from numpy import*
a = array(eval(input('quantos saques foram efuados: ')))
b=0
for i in range(size(a)):
	if(a[i]>= 2000):
		b=b+1
c=zeros(b, dtype=int)
d = 0
for i in range(size(a)):
	if(a[i]>= 2000):
		c[d] = i
		d = d +1
print(b)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:50:05) 
-- CODE:
from numpy import*
a = array(eval(input('quantos saques foram efuados: ')))
b=0
for i in range(size(a)):
	if(a[i]>= 2000):
		b=b+1
c=zeros(d, dtype=int)
d = 0
for i in range(size(a)):
	if(a[i]>= 2000):
		c[d] = i
		d = d +1
print(b)
print(d)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:51:03) 
-- CODE:
from numpy import*
a = array(eval(input('quantos saques foram efuados: ')))
b=0
for i in range(size(a)):
	if(a[i] >= 2000):
		b=b+1
c=zeros(b, dtype=int)
d = 0
for i in range(size(a)):
	if(a[i]>= 2000):
		c[d] = i
		d=d+1
print(b)
print(d)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:51:24) 
-- CODE:
from numpy import*
a = array(eval(input('quantos saques foram efuados: ')))
b=0
for i in range(size(a)):
	if(a[i] >= 2000):
		b=b+1
c=zeros(b, dtype=int)
d=0
for i in range(size(a)):
	if(a[i]>= 2000):
		c[d] = i
		d=d+1
print(b)
print(d)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:51:57) 
-- CODE:
from numpy import*
a = array(eval(input('quantos saques foram efuados: ')))
b=0
for i in range(size(a)):
	if(a[i] >= 2000):
		b=b+1
c=zeros(b, dtype=int)
d=0
for i in range(size(a)):
	if(a[i]>=2000):
		c[d]=i
		d=d+1
print(b)
print(d)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:52:05) 
-- CODE:
from numpy import*
a = array(eval(input('quantos saques foram efuados: ')))
b=0
for i in range(size(a)):
	if(a[i] >= 2000):
		b=b+1
c=zeros(b, dtype=int)
d=0
for i in range(size(a)):
	if(a[i]>2000):
		c[d]=i
		d=d+1
print(b)
print(d)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:53:01) 
-- CODE:
from numpy import*
a = array(eval(input('quantos saques foram efuados: ')))
b=0
for i in range(size(a)):
	if(a[i] >= 2000):
		b=b+1
c=zeros(b, dtype=int)
d=0
for i in range(size(a)):
	if(a[i]>=2000):
		c[d]=i
		d=d+1
print(b)
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:54:30) 
-- CODE:
from numpy import*
a = array(eval(input('quantos saques foram efuados: ')))
b=0
for i in range(size(a)):
	if(a[i] >= 2000):
		b=b+1
c=zeros(b, dtype=int)
d=0
for i in range(size(a)):
	if(a[i]>=2000):
		c[d]=i
		d=d+1
print(b)
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:54:41) 
-- CODE:
from numpy import*
a = array(eval(input('quantos saques foram efuados: ')))
b=0
for i in range(size(a)):
	if(a[i] >= 2000):
		b=b+1
c=zeros(b, dtype=int)
d=0
for i in range(size(a)):
	if(a[i]>=2000):
		c[d]=i
		d=d+1
print(b)
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:54:41) 
-- CODE:
from numpy import*
a = array(eval(input('quantos saques foram efuados: ')))
b=0
for i in range(size(a)):
	if(a[i] >= 2000):
		b=b+1
c=zeros(b, dtype=int)
d=0
for i in range(size(a)):
	if(a[i]>=2000):
		c[d]=i
		d=d+1
print(b)
print(d)
-- EXECUTION TIME:
0.881533
-- TEST CASE 1:
---- input:
[2000,1500,2100,1500,3000,3200,1205,1800]
---- correct output:
4
[0 2 4 5]
---- user output:
4
4
-- TEST CASE 2:
---- input:
[2000,1500,2100,1500,3000]
---- correct output:
3
[0 2 4]
---- user output:
3
3
-- TEST CASE 3:
---- input:
[2000,1500,1950,1555,1999,2050,2560,2851,1500,3000]
---- correct output:
5
[0 5 6 7 9]
---- user output:
5
5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
